<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.2</version>
        <relativePath/>
    </parent>

    <groupId>ru.retailhub</groupId>
    <artifactId>retailhub-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>RetailHub Platform</name>
    <description>Event-Driven платформа диспетчеризации консультантов в ритейле</description>

    <modules>
        <module>api-spec</module>
        <module>app</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <swagger-annotations.version>2.2.28</swagger-annotations.version>
        <springdoc.version>2.8.4</springdoc.version>
        <openapi-generator.version>7.8.0</openapi-generator.version>
    </properties>

</project>
